@@ -1,0 +1,156 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html tal:omit-tag=""
+  lang="en"
+  xml:lang="en"
+  xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:metal="http://xml.zope.org/namespaces/metal"
+  xmlns:notal="http://www.infrae.com/silva/notal"
+  xmlns:tal="http://xml.zope.org/namespaces/tal"
+  xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+  tal:define="
+    global active_tab string:tab_access;
+    global vein string:lookup;
+    global parent_screen_name string:access;
+  "
+  i18n:domain="silva">
+
+<metal:block use-macro="here/macro_index/macros/master">
+  <metal:block fill-slot="meta">
+    <meta http-equiv="refresh"
+      tal:attributes="content string:900;; url=${model/absolute_url}/edit/tab_access" />
+</metal:block>
+<metal:block fill-slot="main"
+  tal:define="
+    no_entry string:-;
+    has_access here/has_change_access_permission;"
+  tal:condition="has_access">
+
+<script type="text/javascript"
+  tal:content="structure python:here.focus_editor('name')">
+  focus cursor
+</script>
+
+<table class="columns">
+  <tbody>
+    <tr>
+      <td class="left">
+
+        <span tal:replace="nothing">
+          ______________ previous screen transport ______________
+        </span>
+        <table class="listing">
+          <thead>
+            <tr>
+              <td class="parent">
+                <a href="parent screen"
+                  title="return to previous screen: alt-k"
+                  accesskey="k"
+                  tal:attributes="href here/lookup_back_link"
+                  i18n:attributes="title"
+                  >
+                  <div class="transport-border" i18n:translate="">
+                    bac<u>k</u>...
+                  </div>
+                </a>
+              </td>
+            </tr>
+          </thead>
+        </table>
+      </td>
+
+      <tal:block replace="nothing">
+        _____________________ main subtable _____________________
+      </tal:block>
+      <td class="main">
+        <form action="lookup_add_userid"
+          method="post">
+          <table class="listing">
+            <thead>
+              <tr tal:replace="nothing">
+                ______________ vein + title row ______________
+              </tr>
+              <tr>
+                <td class="top" colspan="2">
+                  <h2 tal:attributes="title string:id: ${model/id}">
+                    <img tal:replace="structure python:view.render_icon(model)" />
+                    <tal:block i18n:translate="">
+                      user clipboard at
+                      &#xab;<span tal:content="string:${model/get_title_or_id_editable}" i18n:name="title_or_id">title</span>&#xbb;
+                    </tal:block>
+                  </h2>
+                </td>
+              </tr>
+              <tr class="top-controls">
+                <td colspan="2">
+                  <h3 i18n:translate="">
+                    add user to clipboard
+                  </h3>
+                </td>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr class="odd">
+                <td class="align-right"
+                  i18n:translate="">
+                  username
+                </td>
+                <td class="align-right"
+                  style="width:60%;">
+                  <input class="store"
+                    name="name"
+                    type="text"
+                    value=""
+                  />
+                </td>
+              </tr>
+              <tr class="controls">
+                <td class="align-right"
+                   colspan="2">
+                  <input class="button"
+                    type="submit"
+                    value="add"
+                    accesskey="s"
+                    title="access key: alt-s"
+                    i18n:attributes="value;title"
+                  />
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </form>
+      </td>
+
+      <td class="right">
+        <!-- Clipboard -->
+        <metal:block use-macro="view/macro_user_lookup_clipboard/macros/clipboard">
+          <metal:block fill-slot="clipboard_lookup_action">
+            <a class="transport"
+              style="float: right;"
+              accesskey="u"
+              title="return to the access screen with this clipboard: alt-u"
+              href="lookup_back_link"
+              tal:attributes="href here/lookup_back_link"
+              i18n:attributes="title"
+              i18n:translate="">
+              <u>u</u>se clipboard...
+            </a>
+          </metal:block>
+          <metal:block fill-slot="clipboard_actions">
+            <input class="warning"
+              name="lookup_remove_from_selection:method"
+              type="submit"
+              value="remove user"
+              title="remove users from the clipboard: alt-r"
+              accesskey="r"
+              i18n:attributes="value;title"
+           />
+          </metal:block>
+        </metal:block>
+      </td>
+    </tr>
+  </tbody>
+</table>
+</metal:block>
+</metal:block>
+</html>
